# biosoup

./: CMakeLists.txt  pyproject.toml  setup.py
benchmark/: CMakeLists.txt  nucleic_acid_benchmark.cpp
data/: bench00.txt  bench01.txt  bench02.txt  de_bench00.txt  de_bench01.txt  de_bench02.txt
include/biosoup/: nucleic_acid.hpp  nucleic_acid_exp.hpp
pybind/: main.cc  test_biosouppy.py
test/: nucleic_acid_test.cpp
